--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Noto+Serif+Display:wght@200&display=swap" rel="stylesheet">
     
-    <title>Document</title>
+    <title>Visual Gallery</title>
 </head>
 <body>
 
